# bigquery-funcs

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml
src/bigquery-funcs/: __init__.py  _types.py  models.py  tables.py
src/bigquery_funcs/: _types.py  auth.py  models.py  queries.py  tables.py
tests/: logging_config.py  pytest.ini  queries_test.py  smoke_test.py  utils.py
